<resources>
    <string name="app_name">Home Assistant Cliente</string>

    <!-- INIT MENU -->
    <string name="title_menu_request">Solicitud</string>
    <string name="title_menu_settings">Configuración</string>
    <string name="title_menu_history">Historial</string>
    <string name="title_menu_favourites">Favoritos</string>
    <!-- END MENU -->


    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- INIT LOGIN -->
    <string name="login_edt_user">Correo electrónico</string>
    <string name="login_edt_password">Contraseña</string>
    <string name="login_btn_signin">Iniciar</string>
    <string name="login_btn_signup">Registrar</string>
    <string name="login_btn_forgot">Olvidé mi contraseña</string>
    <string name="login_empty_username">Debe ingresar el usuario</string>
    <string name="login_empty_password">Debe ingresar el password</string>
    <string name="login_empty_username_password">Debe ingresar el usuario y password</string>
    <string name="login_dialog_progress">Autenticando usuario</string>
    <!-- END LOGIN -->

    <!-- INIT REGISTER -->
    <string name="register_title">Registro</string>
    <string name="register_edt_name">Nombres y Apellidos</string>
    <string name="register_edt_mail">Correo electrónico</string>
    <string name="register_edt_document">Número de Documento</string>
    <string name="register_edt_phone">Celular</string>
    <string name="register_edt_password">Contraseña</string>
    <string name="register_edt_repeat_password">Repetir contraseña</string>
    <string name="register_edt_address">Dirección</string>
    <string name="register_txt_gender">Sexo:</string>
    <string name="register_txt_location">Ubicación:</string>
    <string name="register_txt_date">Fecha de nacimiento:</string>
    <string name="register_rbtn_male">Masculino</string>
    <string name="register_rbtn_female">Femenino</string>
    <string name="register_btn_save">Guardar</string>
    <string name="register_btn_photo">Tomar foto</string>
    <string name="register_empty_username">Debe ingresar sus nombres y apellidos</string>
    <string name="register_empty_mail">Debe ingresar su correo electrónico</string>
    <string name="register_empty_phone">Debe ingresar su número celular</string>
    <string name="register_empty_address">Debe ingresar su dirección</string>
    <string name="register_empty_password">Debe ingresar su contraseña</string>
    <string name="register_empty_re_password">Debe repetir su contraseña</string>
    <string name="register_empty_document">Debe ingresar su número de documento</string>
    <string name="register_invalid_mail">Ingrese un correo electrónico válido</string>
    <string name="register_invalid_re_password">Las contraseñas no son iguales</string>
    <!-- END REGISTER -->

    <!-- INIT RECOVERY -->
    <string name="recovery_title">Recuperar Contraseña</string>
    <string name="recovery_edt_mail">Correo electrónico</string>
    <string name="recovery_btn_save">Enviar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recovery_empty_mail">Debe ingresar su correo electrónico</string>
    <string name="recovery_invalid_mail">Ingrese un correo electrónico válido</string>
    <!-- END RECOVERY -->

    <!-- INIT NEW REQUEST -->
    <string name="new_request_title">Nueva Solicitud</string>
    <string name="new_request_description">Descripción</string>
    <string name="new_request_subject">Asunto</string>
    <string name="new_request_request_type">Tipo Solicitud</string>
    <string name="new_request_send">Enviar</string>
    <string name="new_request_empty_subject">Debe completar el campo Asunto</string>
    <string name="new_request_empty_desc">Debe completar el campo Descrpción</string>

    <string-array name="array_request_type">
        <item>Carpintero</item>
        <item>Plomero</item>
        <item>Albañil</item>
        <item>Pintor</item>
        <item>Mecánico</item>
    </string-array>
    <!-- END NEW REQUEST -->
</resources>
