<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/option_request"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/title_menu_request" />

        <item
            android:id="@+id/option_history"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_menu_history" />

        <item
            android:id="@+id/option_favourites"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/title_menu_favourites" />
        <item
            android:id="@+id/option_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_menu_settings" />

    </group>

</menu>
