<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:layout_marginBottom="@dimen/login_logo_mg_bottom"
        android:textSize="25dp"/>

    <ImageView
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginBottom="@dimen/login_logo_mg_bottom"
        android:src="@drawable/ic_login_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.175" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_txt_edt"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearanceErrorLogin">

                <EditText
                    android:id="@+id/edtUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="@dimen/login_edt_dw_pd"
                    android:hint="@string/login_edt_user"
                    android:maxLines="1"
                    android:padding="@dimen/login_edt_pd"
                    android:textColor="@color/login_txt_edt"
                    android:textColorHint="@color/login_hnt_edt" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_txt_edt"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearanceErrorLogin">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/login_edt_dw_pd"
                    android:hint="@string/login_edt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/login_edt_pd"
                    android:textColor="@color/login_txt_edt"
                    android:textColorHint="@color/login_hnt_edt" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/login_btn_pd"
                    android:text="@string/login_btn_signin"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"/>

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/login_btn_pd"
                    android:text="@string/login_btn_signup"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.175" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_forgot"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/login_logo_mg_bottom"
        android:textSize="15dp"/>
</LinearLayout>