<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:popupTheme="@style/AppTheme.AppBarOverlay"
                android:theme="@style/AppTheme.AppBarOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_new_request_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_request_request_type"/>

            <Spinner
                android:id="@+id/spnRequestType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layoutMode="clipBounds"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_txt_edt"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearanceErrorLogin">

                <EditText
                    android:id="@+id/edtSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_request_subject"
                    android:inputType="textCapWords"
                    android:maxLines="20"
                    android:padding="@dimen/login_edt_pd"
                    android:gravity="top"
                    android:textColor="@color/request_txt_edt"
                    android:textColorHint="@color/request_hnt_edt"
                    android:backgroundTint="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/login_txt_edt"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/TextAppearanceErrorRequest">

                <EditText
                    android:id="@+id/edtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:hint="@string/new_request_description"
                    android:inputType="textMultiLine"
                    android:lines="12"
                    android:maxLines="12"
                    android:padding="@dimen/login_edt_pd"
                    android:textColor="@color/request_txt_edt"
                    android:textColorHint="@color/request_hnt_edt" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/new_request_send"/>
        </LinearLayout>
</LinearLayout>